ajout dataset aliments

--- a/notebooks/insee.ipynb
+++ b/notebooks/insee.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "id": "ea867b93",
    "metadata": {},
    "outputs": [
@@ -579,7 +579,7 @@
        "[19 rows x 26 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -598,7 +598,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "id": "5e60b9f6",
    "metadata": {},
    "outputs": [
@@ -2487,14 +2487,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "id": "7b3bf098",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1be5c4babd9a4a6499898f1032c10a4e",
+       "model_id": "e9994fb05e0c4d81a3f0c0ce3a3596c0",
        "version_major": 2,
        "version_minor": 0
       },
@@ -2511,7 +2511,7 @@
        "<function __main__.update_dashboard(annee)>"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2616,6 +2616,223 @@
     "        style={'description_width': 'initial'}\n",
     "    )\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "3bceaf67",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Aliment</th>\n",
+       "      <th>Calories</th>\n",
+       "      <th>Fibres</th>\n",
+       "      <th>Glucides</th>\n",
+       "      <th>Gras</th>\n",
+       "      <th>IG</th>\n",
+       "      <th>CG</th>\n",
+       "      <th>Proteines</th>\n",
+       "      <th>Famille_regroupee</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Pastis</td>\n",
+       "      <td>274.0</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>2.86</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>50.0</td>\n",
+       "      <td>1.4</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>Boissons</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Bigorneau, cuit</td>\n",
+       "      <td>85.0</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>3.50</td>\n",
+       "      <td>50.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>18.0</td>\n",
+       "      <td>Produits animaux</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Calmar ou calamar ou encornet, cru</td>\n",
+       "      <td>77.0</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>2.17</td>\n",
+       "      <td>1.19</td>\n",
+       "      <td>50.0</td>\n",
+       "      <td>1.1</td>\n",
+       "      <td>15.6</td>\n",
+       "      <td>Produits animaux</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Calmar ou Calamar ou encornet, é la romaine (b...</td>\n",
+       "      <td>252.0</td>\n",
+       "      <td>1.66</td>\n",
+       "      <td>21.20</td>\n",
+       "      <td>14.40</td>\n",
+       "      <td>50.0</td>\n",
+       "      <td>10.6</td>\n",
+       "      <td>15.5</td>\n",
+       "      <td>Produits animaux</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Coquille Saint-Jacques, noix et corail, crue</td>\n",
+       "      <td>83.0</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.78</td>\n",
+       "      <td>1.31</td>\n",
+       "      <td>50.0</td>\n",
+       "      <td>0.4</td>\n",
+       "      <td>16.0</td>\n",
+       "      <td>Produits animaux</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>95</th>\n",
+       "      <td>Levure de boulanger, compressée</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>7.15</td>\n",
+       "      <td>11.90</td>\n",
+       "      <td>1.90</td>\n",
+       "      <td>50.0</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>Aides culinaires</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>96</th>\n",
+       "      <td>Moutarde</td>\n",
+       "      <td>152.0</td>\n",
+       "      <td>1.00</td>\n",
+       "      <td>4.33</td>\n",
+       "      <td>11.20</td>\n",
+       "      <td>50.0</td>\n",
+       "      <td>2.2</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>Aides culinaires</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>97</th>\n",
+       "      <td>Persil, frais</td>\n",
+       "      <td>43.0</td>\n",
+       "      <td>4.30</td>\n",
+       "      <td>3.48</td>\n",
+       "      <td>0.63</td>\n",
+       "      <td>45.0</td>\n",
+       "      <td>1.6</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>Aides culinaires</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>98</th>\n",
+       "      <td>Poivre noir, poudre</td>\n",
+       "      <td>330.0</td>\n",
+       "      <td>25.70</td>\n",
+       "      <td>39.50</td>\n",
+       "      <td>7.50</td>\n",
+       "      <td>50.0</td>\n",
+       "      <td>19.8</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>Aides culinaires</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>99</th>\n",
+       "      <td>Raifort, cru</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>7.50</td>\n",
+       "      <td>13.00</td>\n",
+       "      <td>0.70</td>\n",
+       "      <td>50.0</td>\n",
+       "      <td>6.5</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>Aides culinaires</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>100 rows × 9 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                              Aliment  Calories  Fibres  \\\n",
+       "0                                              Pastis     274.0    0.00   \n",
+       "1                                     Bigorneau, cuit      85.0    0.00   \n",
+       "2                  Calmar ou calamar ou encornet, cru      77.0    0.00   \n",
+       "3   Calmar ou Calamar ou encornet, é la romaine (b...     252.0    1.66   \n",
+       "4        Coquille Saint-Jacques, noix et corail, crue      83.0    0.00   \n",
+       "..                                                ...       ...     ...   \n",
+       "95                    Levure de boulanger, compressée     100.0    7.15   \n",
+       "96                                           Moutarde     152.0    1.00   \n",
+       "97                                      Persil, frais      43.0    4.30   \n",
+       "98                                Poivre noir, poudre     330.0   25.70   \n",
+       "99                                       Raifort, cru     100.0    7.50   \n",
+       "\n",
+       "    Glucides   Gras    IG    CG  Proteines Famille_regroupee  \n",
+       "0       2.86   0.00  50.0   1.4        0.0          Boissons  \n",
+       "1       0.00   3.50  50.0   0.0       18.0  Produits animaux  \n",
+       "2       2.17   1.19  50.0   1.1       15.6  Produits animaux  \n",
+       "3      21.20  14.40  50.0  10.6       15.5  Produits animaux  \n",
+       "4       0.78   1.31  50.0   0.4       16.0  Produits animaux  \n",
+       "..       ...    ...   ...   ...        ...               ...  \n",
+       "95     11.90   1.90  50.0   6.0        0.0  Aides culinaires  \n",
+       "96      4.33  11.20  50.0   2.2        0.0  Aides culinaires  \n",
+       "97      3.48   0.63  45.0   1.6        0.0  Aides culinaires  \n",
+       "98     39.50   7.50  50.0  19.8        0.0  Aides culinaires  \n",
+       "99     13.00   0.70  50.0   6.5        0.0  Aides culinaires  \n",
+       "\n",
+       "[100 rows x 9 columns]"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "aliment = pd.read_csv(\"../datasets/composition/DF_Aliment_NUTRIPROFIL.csv\", nrows=100)\n",
+    "#aliment['Famille_regroupee'].unique()\n",
+    "aliment\n"
    ]
   }
  ],
