🤖 Ajout du téléchargement auto des modèles santé dans train_models.ipynb

--- a/train_models.ipynb
+++ b/train_models.ipynb
@@ -29,7 +29,39 @@
     "from sklearn.ensemble import RandomForestClassifier\n",
     "from sklearn.metrics import mean_squared_error, r2_score\n",
     "import joblib\n",
-    "from pathlib import Path\n"
+    "from pathlib import Path\n",
+    "import os\n",
+    "import requests\n",
+    "\n",
+    "# Dossier de destination\n",
+    "destination_dir = \"streamlit\"\n",
+    "os.makedirs(destination_dir, exist_ok=True)\n",
+    "\n",
+    "# URLs brutes de GitHub\n",
+    "base_url = \"https://raw.githubusercontent.com/stevens75010/nutriprofil/main/streamlit/\"\n",
+    "model_files = [\n",
+    "    \"diabete_risque_randomforest.pkl\",\n",
+    "    \"obesite_risque_randomforest.pkl\",\n",
+    "    \"mcv_risque_randomforest.pkl\",\n",
+    "    \"cancercolorectal_risque_randomforest.pkl\"\n",
+    "]\n",
+    "\n",
+    "# Téléchargement automatique\n",
+    "for filename in model_files:\n",
+    "    file_url = base_url + filename\n",
+    "    local_path = os.path.join(destination_dir, filename)\n",
+    "    \n",
+    "    if not os.path.exists(local_path):\n",
+    "        print(f\"📥 Téléchargement de {filename}...\")\n",
+    "        r = requests.get(file_url)\n",
+    "        if r.status_code == 200:\n",
+    "            with open(local_path, \"wb\") as f:\n",
+    "                f.write(r.content)\n",
+    "            print(f\"✅ Enregistré : {local_path}\")\n",
+    "        else:\n",
+    "            print(f\"❌ Échec du téléchargement : {file_url}\")\n",
+    "    else:\n",
+    "        print(f\"🔁 Déjà présent : {local_path}\")\n"
    ]
   },
   {
@@ -125,7 +157,11 @@
    ]
   }
  ],
- "metadata": {},
+ "metadata": {
+  "language_info": {
+   "name": "python"
+  }
+ },
  "nbformat": 4,
  "nbformat_minor": 5
 }
