--- a/train_models.ipynb
+++ b/train_models.ipynb
@@ -16,10 +16,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "031ac2fb",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "🔁 Déjà présent : streamlit\\diabete_risque_randomforest.pkl\n",
+      "🔁 Déjà présent : streamlit\\obesite_risque_randomforest.pkl\n",
+      "🔁 Déjà présent : streamlit\\mcv_risque_randomforest.pkl\n",
+      "🔁 Déjà présent : streamlit\\cancercolorectal_risque_randomforest.pkl\n"
+     ]
+    }
+   ],
    "source": [
     "# 📦 Imports\n",
     "import pandas as pd\n",
@@ -74,10 +85,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "7d9097aa",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "R²: 0.9998725252973537\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "['streamlit/model_conso.pkl']"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Chargement des données conso\n",
     "df_conso = pd.read_csv('streamlit/data/conso-menages-2024.csv')\n",
@@ -105,10 +134,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "c9fc3f18",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "R² CG: 0.8907643393336107\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "['streamlit/model_charge_glycémique.pkl']"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Chargement données aliments\n",
     "df_alim = pd.read_csv('streamlit/data/dataframe_complet_rempli_proteines.csv')\n",
@@ -135,10 +182,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "3c5b9f28",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ diabete — R² approx : 0.5193704600484261\n",
+      "✅ obesite — R² approx : 0.4648910411622276\n",
+      "✅ mcv — R² approx : 0.48426150121065376\n",
+      "✅ cancercolorectal — R² approx : 0.49878934624697335\n"
+     ]
+    }
+   ],
    "source": [
     "# Réutilisation df_alim pour entraîner 4 modèles de classification binaire\n",
     "features = df_alim.drop(columns=['Aliment', 'Famille_regroupee', 'IG', 'CG'])\n",
@@ -155,11 +213,74 @@
     "    joblib.dump(model, f'streamlit/{t}_risque_randomforest.pkl')\n",
     "    print(f\"✅ {t} — R² approx :\", model.score(X_test, y_test))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "ee2e6412",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ Présent : model_charge_glycémique.pkl\n",
+      "✅ Présent : model_conso.pkl\n",
+      "✅ Présent : diabete_risque_randomforest.pkl\n",
+      "✅ Présent : obesite_risque_randomforest.pkl\n",
+      "✅ Présent : mcv_risque_randomforest.pkl\n",
+      "✅ Présent : cancercolorectal_risque_randomforest.pkl\n",
+      "\n",
+      "🎉 Tous les modèles sont bien présents !\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 🔍 Vérification des 6 fichiers modèles\n",
+    "import os\n",
+    "\n",
+    "required_models = [\n",
+    "    \"model_charge_glycémique.pkl\",\n",
+    "    \"model_conso.pkl\",\n",
+    "    \"diabete_risque_randomforest.pkl\",\n",
+    "    \"obesite_risque_randomforest.pkl\",\n",
+    "    \"mcv_risque_randomforest.pkl\",\n",
+    "    \"cancercolorectal_risque_randomforest.pkl\"\n",
+    "]\n",
+    "\n",
+    "missing = []\n",
+    "for model in required_models:\n",
+    "    path = os.path.join(\"streamlit\", model)\n",
+    "    if os.path.exists(path):\n",
+    "        print(f\"✅ Présent : {model}\")\n",
+    "    else:\n",
+    "        print(f\"❌ Manquant : {model}\")\n",
+    "        missing.append(model)\n",
+    "\n",
+    "if not missing:\n",
+    "    print(\"\\n🎉 Tous les modèles sont bien présents !\")\n",
+    "else:\n",
+    "    print(f\"\\n⚠️ Modèles manquants : {missing}\")\n"
+   ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.13.3"
   }
  },
  "nbformat": 4,
